@@ -65,18 +65,21 @@ model_assertion
 -d, --debug
     Enable debugging output.
 
--o FILENAME, --output FILENAME
-    The generated disk image file.  If not given, the image will be put in a
-    file called ``disk.img`` in the working directory, in which case, you
-    probably want to specify ``--workdir``.  If ``--workdir`` is not given,
-    the image will be written to the current working directory.  **NOTE** when
-    run as a snap, ``ubuntu-image`` refuses to write to ``/tmp`` since this
-    directory is not accessible outside of the snap environment.
-
 -O DIRECTORY, --output-dir DIRECTORY
     Write generated disk image files to this directory.  The files will be
-    named after the ``gadget.yaml`` volume name, with ``.img`` suffix
-    appended.  **NOTE** when run as a snap, this directory cannot be ``/tmp``.
+    named after the ``gadget.yaml`` volume names, with ``.img`` suffix
+    appended.  **NOTE** when run as a snap, this directory cannot be
+    ``/tmp``.  This option replaces, and cannot be used with the deprecated
+    ``--output`` option.
+
+-o FILENAME, --output FILENAME
+    **DEPRECATED** (Use ``--output-dir`` instead.)  The generated disk image
+    file.  If not given, the image will be put in a file called ``disk.img``
+    in the working directory, in which case, you probably want to specify
+    ``--workdir``.  If ``--workdir`` is not given, the image will be written
+    to the current working directory.  **NOTE** when run as a snap,
+    ``ubuntu-image`` refuses to write to ``/tmp`` since this directory is not
+    accessible outside of the snap environment.
 
 --image-size SIZE
     The size of the generated disk image file (see ``--output``).  If this
