@@ -1,7 +1,8 @@
 ubuntu-image (0.15+17.04ubuntu1) UNRELEASED; urgency=medium
 
   * Add -O/--output-dir command line options.  Disk image files are
-    written here using the volume name and a .img suffix.
+    written here using the volume name and a .img suffix.  Deprecate
+    -o/--output.  -O and -o are mutually exclusive.
 
  -- Barry Warsaw <barry@ubuntu.com>  Tue, 24 Jan 2017 18:01:23 -0500
 
